# testTaskTODO

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 26f80c17e831_initial_tables.py  2af8409b0752_initial_tables.py  41c73b1078c4_initial_tables.py  510e8674f90b_initial_tables.py
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  alembic-uvi-script.sh  docker-compose.yml  docker-compose_nginx.yml
backend/alembic/versions/: 26f80c17e831_initial_tables.py  41c73b1078c4_initial_tables.py  7956e8b032b1_initial_tables.py
backend/nginx/: nginx.conf
backend/src/: app.py  config.py
backend/src/adapters/: repository.py
bot/: .gitignore  Makefile  bot.py  docker-compose.yml  pyproject.toml  use_cases.py
bot/src/: backend_client.py  bot.py  config.py  redis_client.py  schemas.py  simple_container.py
bot/src/handers/: get_notes_handler.py  note_creat.py  registration.py  routers.py  search_by_tags.py  update_notes.py  utils.py
bot/src/keyboards/: common_keyboards.py  inline_keyboards.py
bot/src/services/: auth_service.py  notes_service.py
src/: app.py  config.py
src/adapters/: repository.py
src/authorization/: authorization.py
src/authorization /: authorization.py  exceptions.py  security.py  tokens.py
src/dependencies/: auth_deps.py  db_services.py  hash_dep.py  session_dep.py
src/domain/: __init__.py  entities.py  orm.py  schemas.py
src/entrypoints/: app.py
src/routes/: auth.py  notes.py
src/services/: notes_service.py  user_service.py
(+12 files in other folders)
