[tool.poetry]
name = "todo-test-task"
version = "0.1.0"
description = ""
authors = ["SosisterRapStar <timoshenkovvanya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.34"
fastapi = "^0.114.2"
pydantic = "^2.9.1"
pydantic-settings = "^2.5.2"
ruff = "^0.6.5"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
jose = "^1.0.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
